--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
-  "name": "discord-bot-stt",
+  "name": "moderatorbot",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/OriolBech/ModeratorBot.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/OriolBech/ModeratorBot/issues"
+  },
+  "homepage": "https://github.com/OriolBech/ModeratorBot#readme",
   "dependencies": {
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0"
